# CHANGES TO MTurkR 0.7 #

## SIGNIFICANT USER-VISIBLE CHANGES ##

* The use of `credentials()`, and `options("MTurkR.keypair")` are completely deprecated. A warning will now be issued if trying to supply credentials in this way. AWS credentials should be specified in environment variables `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`. Messages are triggered on package load if environment variables are not set. (#102)
* `HITStatus()` will now display any non-empty RequesterAnnotation field for a HIT. (#101)
* The deprecated argument `print`, which was removed in v0.5, has been fully removed. Use `verbose` instead. (#97)
* The deprecated functions `mturkrhelp` and `APIReference` have been removed. (#96)
* `MTurkR.Wizard` has been removed from MTurkR and has been recreated as a separate package. (#95)
* `HITStatus` now reports condensed column names better suited for narrow displays.
* Correctly handle multiple `response.group` arguments passed to HIT-related functions. (#89)
* `authenticate`, which was deprecated in v0.5, is removed.
* Use of RCurl has been replaced by curl. This necessitated a new dependency, base64enc. (#86)
* In lieu of `credentials`, AWS credentials should be specified via environment variables `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`. `credentials` will be deprecated.
* `SufficientFunds()` reflects the new commission structure effective July 21, 2015. (#87)
* `BulkCreateFromTemplate` and `BulkCreateFromURLs` now have a `frame.height` argument with a default of 450.

## DOCUMENTATION ##

* Descriptions of global package options have been added to MTurkR-package.Rd. (#103)
* The package now includes additional HTMLQuestion templates including examples for image categorization and sentiment rating. (#94)
* Documentation for `GenerateHITReviewPolicy` and `GenerateAssignmentReviewPolicy` was expanded and tested, and a related HTMLQuestion HIT template is now installed.

## BUG FIXES ##
